--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,9 +21,17 @@ linter:
   # or a specific dart file by using the `// ignore: name_of_lint` and
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
-  rules:
+  #  rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+  rules:
+    cascade_invocations: false
+    sort_child_properties_last: false
+    sort_constructors_first: false
+    use_key_in_widget_constructors: false
+    public_member_api_docs: false
+    sort_pub_dependencies: false
+    use_setters_to_change_properties: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
