--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
           channel: 'stable'
       - run: flutter --version
 
-  check-bats-version:
+  test_code:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
