--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           flutter-version: '3.0.5'
           channel: 'stable'
-      - run: flutter --version
+      - run: flutter pub get
       - run: flutter run
       - run: flutter test integration_test/add_new_todo_item_test.dart
       - run: flutter test integration_test/edit_existing_item_test.dart
