- Add -d all to flutter test command in test_code job

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -22,7 +22,5 @@ jobs:
           channel: 'stable'
       - run: flutter create .
       - run: flutter pub get
-      - run: flutter test -d all integration_test/add_new_todo_item_test.dart
-      - run: flutter test -d all integration_test/edit_existing_item_test.dart
-      - run: flutter test -d all integration_test/delete_existing_item_test.dart
+      - run: flutter test -d all
 
