--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.5
   provider: ^6.0.3
+  google_maps_flutter: ^2.2.1
 
 dev_dependencies:
   flutter_test:
