--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,11 +33,11 @@ jobs:
 
   # job responsible for running Flutter tests on Android devices
   android_Integration_test:
-    runs-on: macos-11
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         api-level:
-          - 29
+          - 31
           # you can add more API level if you want to run your tests on different API
       fail-fast: true
     steps:
